{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 22,
  "lineage": "c1725300-8859-7489-d363-d74974073159",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "my_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/publicIPAddresses/KyndrylPublicIP"
              }
            ],
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB",
            "location": "eastus",
            "name": "Kyndryl-LB",
            "resource_group_name": "gowri_rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.my_pip",
            "azurerm_resource_group.my_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/backendAddressPools/bkyndryl-ackend-pool",
            "loadbalancer_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB",
            "name": "bkyndryl-ackend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.my_lb",
            "azurerm_public_ip.my_pip",
            "azurerm_resource_group.my_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.my_lb",
            "azurerm_public_ip.my_pip",
            "azurerm_resource_group.my_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/backendAddressPools/bkyndryl-ackend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB",
            "name": "http-rule",
            "probe_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/probes/http-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.my_lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_lb_probe.http_probe",
            "azurerm_public_ip.my_pip",
            "azurerm_resource_group.my_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkInterfaces/KyndrylNIC-1",
            "internal_domain_name_suffix": "lfh534c2fzvujj2ywbizzmsc0b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/virtualNetworks/KyndrylVNet/subnets/KyndrylSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "KyndrylNIC-1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "gowri_rg1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.my_rg",
            "azurerm_subnet.my_Subnet",
            "azurerm_virtual_network.my_Vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkInterfaces/KyndrylNIC-2",
            "internal_domain_name_suffix": "lfh534c2fzvujj2ywbizzmsc0b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/virtualNetworks/KyndrylVNet/subnets/KyndrylSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "KyndrylNIC-2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "gowri_rg1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.my_rg",
            "azurerm_subnet.my_Subnet",
            "azurerm_virtual_network.my_Vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkInterfaces/KyndrylNIC-3",
            "internal_domain_name_suffix": "lfh534c2fzvujj2ywbizzmsc0b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/virtualNetworks/KyndrylVNet/subnets/KyndrylSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "KyndrylNIC-3",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "gowri_rg1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.my_rg",
            "azurerm_subnet.my_Subnet",
            "azurerm_virtual_network.my_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "backend_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/backendAddressPools/bkyndryl-ackend-pool",
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkInterfaces/KyndrylNIC-1/ipConfigurations/internal|/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/backendAddressPools/bkyndryl-ackend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkInterfaces/KyndrylNIC-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.my_lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.my_nic",
            "azurerm_public_ip.my_pip",
            "azurerm_resource_group.my_rg",
            "azurerm_subnet.my_Subnet",
            "azurerm_virtual_network.my_Vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/backendAddressPools/bkyndryl-ackend-pool",
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkInterfaces/KyndrylNIC-2/ipConfigurations/internal|/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/backendAddressPools/bkyndryl-ackend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkInterfaces/KyndrylNIC-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.my_lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.my_nic",
            "azurerm_public_ip.my_pip",
            "azurerm_resource_group.my_rg",
            "azurerm_subnet.my_Subnet",
            "azurerm_virtual_network.my_Vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/backendAddressPools/bkyndryl-ackend-pool",
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkInterfaces/KyndrylNIC-3/ipConfigurations/internal|/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/loadBalancers/Kyndryl-LB/backendAddressPools/bkyndryl-ackend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkInterfaces/KyndrylNIC-3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.my_lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.my_nic",
            "azurerm_public_ip.my_pip",
            "azurerm_resource_group.my_rg",
            "azurerm_subnet.my_Subnet",
            "azurerm_virtual_network.my_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkSecurityGroups/KyndrylNSG",
            "location": "eastus",
            "name": "KyndrylNSG",
            "resource_group_name": "gowri_rg1",
            "security_rule": [],
            "tags": {
              "Environment": "Dev",
              "Owner": "Gowri Shankar",
              "Project": "Terraform_Testing"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.my_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkSecurityGroups/KyndrylNSG/securityRules/Allow-80",
            "name": "Allow-80",
            "network_security_group_name": "KyndrylNSG",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "gowri_rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.my_nsg",
            "azurerm_resource_group.my_rg"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkSecurityGroups/KyndrylNSG/securityRules/Allow-443",
            "name": "Allow-443",
            "network_security_group_name": "KyndrylNSG",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "gowri_rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.my_nsg",
            "azurerm_resource_group.my_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/publicIPAddresses/KyndrylPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.173.155.120",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "KyndrylPublicIP",
            "resource_group_name": "gowri_rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.my_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/virtualNetworks/KyndrylVNet/subnets/KyndrylSubnet",
            "name": "KyndrylSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "gowri_rg1",
            "virtual_network_name": "KyndrylVNet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.my_rg",
            "azurerm_virtual_network.my_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "my_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/virtualNetworks/KyndrylVNet/subnets/KyndrylSubnet",
            "network_security_group_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/networkSecurityGroups/KyndrylNSG",
            "subnet_id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/virtualNetworks/KyndrylVNet/subnets/KyndrylSubnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.my_nsg",
            "azurerm_resource_group.my_rg",
            "azurerm_subnet.my_Subnet",
            "azurerm_virtual_network.my_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my_Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f8fe4f59-2e5c-446b-a798-b0519cb242d1",
            "id": "/subscriptions/294fc8e5-3491-4a9e-8db3-78b02fd829e3/resourceGroups/gowri_rg1/providers/Microsoft.Network/virtualNetworks/KyndrylVNet",
            "location": "eastus",
            "name": "KyndrylVNet",
            "resource_group_name": "gowri_rg1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.my_rg"
          ]
        }
      ]
    }
  ]
}